# dek

./: Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: release.yml
examples/: basic.toml  features.toml  pers.toml  test.toml
examples/scripts/: hello.sh
src/: bake.rs  cache.rs  main.rs  output.rs  runner.rs  state.rs  util.rs
src/config/: mod.rs  types.rs
src/providers/: assert.rs  command.rs  file.rs  mod.rs  package.rs  script.rs  service.rs  shell.rs
