[package]
name = "dek"
version = "0.1.30"
edition = "2021"
description = "Declarative environment setup and scripted workflows from TOML"
license = "MIT"
repository = "https://github.com/zcag/dek"
keywords = ["cli", "automation", "environment", "workflow", "toml"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/dek-{ target }.tar.gz"
bin-dir = "dek-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/dek-x86_64-unknown-linux-musl.tar.gz"
bin-dir = "dek-x86_64-unknown-linux-musl/{ bin }"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
which = "7"
chrono = "0.4"
hostname = "0.4"
tempfile = "3"
tar = "0.4"
flate2 = "1"
md5 = "0.7"
libc = "0.2"
regex = "1"
serde_json = "1"
minijinja = "2"
